--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 
 .login-container h2 {
     margin-bottom: 20px;
+    color: #A23909;
 }
 
 .input-container {
@@ -65,7 +66,7 @@ body {
 
 .forgot-password {
     display: block;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 15px;
     color: #007BFF;
     text-decoration: none;
@@ -90,6 +91,7 @@ body {
 .remember-me input {
     margin-right: 5px;
 }
+
 
 .forgot-password {
     color: #007BFF;
